Aliases file: RA and DEC must be computed, not copied.

--- a/config/jwst-aliases.ini
+++ b/config/jwst-aliases.ini
@@ -36,10 +36,11 @@ OBJECT = target_name
 
 # Spatial Characterisation (section B.6.1)
 #
-RA = s_ra
-right_ascension = s_ra
-DEC = s_dec
-declination = s_dec
+# Note: RA and DEC must be computed, not copied
+# RA = s_ra
+# right_ascension = s_ra
+# DEC = s_dec
+# declination = s_dec
 # _NOP_ = s_fov
 # _NOP_ = s_region
 # _NOP_ = s_resolution
