Add .venv and sort.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,17 @@
-.git
-.gitignore
-.dockerignore
 **/__pycache__
 *~
 .DS_Store
-Dockerfile
-Makefile
-docker-compose.yml
-docker-compose-prod.yml
+.dockerignore
+.git
+.gitignore
+.venv
+.vscode
 /catalogs
 /images
 /out
 /work
-/.vscode
+Dockerfile
+Makefile
+docker-compose-prod.yml
+docker-compose.yml
 imdtk.code-workspace
