--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-astropy==4.0
+astropy==4.0.1.post1
 # numpy==1.18.1
-pyyaml==5.3
+pyyaml==5.3.1
 toml==0.10.1
 
 # Testing
-pytest==5.3.5
-pytest-cov==2.8.1
+pytest==5.4.3
+pytest-cov==2.10.0
 
 # Database
-psycopg2==2.8.4
+psycopg2-binary==2.8.5
 # SQLAlchemy==1.3.13
