Synch test DB configuration with real one.

--- a/tests/resources/test-dbconfig.ini
+++ b/tests/resources/test-dbconfig.ini
@@ -1,16 +1,19 @@
 # Default database parameters
+#   NB: these default values have precedence over get's fallback values!
 #
 [DEFAULT]
   DB_MAX_ACTIVE = 10
   VALIDATION_QUERY = SELECT 1
   VALIDATION_QUERY_TIMEOUT = 2
 
-# Fake database test parameters
+# PostgreSQL parameters
+#   NB: some values here require configparser.ExtendedInterpolation
 #
 [db_properties]
   DB_HOST = pgdb
-  DB_NAME = dbname
+  DB_NAME = vos
   DB_PORT = 5432
-  DB_SCHEMA_NAME = schema1
+  DB_PWD = changeMe
+  DB_SCHEMA_NAME = sia
   DB_USER = astrolabe
-  # Missing DB_URL parameter!
+  DB_URI = postgresql://${DB_USER}:${DB_PWD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
