Dont map ID to obs_id in catalog aliases file, for now.

--- a/config/jwst-cat-aliases.ini
+++ b/config/jwst-cat-aliases.ini
@@ -6,6 +6,8 @@
 
 [aliases]
 
-ID = obs_id
+# For some catalogs the given "id" field might be an observation id.
+# ID = obs_id
+ID = id
 RA = s_ra
 DEC = s_dec
