--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
-astropy==4.0.1.post1
-# numpyencoder==0.2.0
-# pandas==1.1.0
-python-irodsclient==0.8.3
+# numpy==1.19.4
+# numpyencoder==0.3.0
+# pandas==1.1.4
+
+# configuration
 pyyaml==5.3.1
-toml==0.10.1
+toml==0.10.2
+
+# iRods distributed filesystem
+python-irodsclient==0.8.3
+
+# Astronomical processing
+astropy==4.2
 
 # Testing
-pytest==5.4.3
-pytest-cov==2.10.0
+pytest==6.1.2
+pytest-cov==2.10.1
 
 # Database
-psycopg2-binary==2.8.5
-# SQLAlchemy==1.3.13
+psycopg2-binary==2.8.6
