--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   imdtk:
-    image: imdtk:devel
+    image: astrolabe/imdtk
     deploy:
       restart_policy:
         condition: none
