--- a/tests/resources/test-dbconfig-no-uri.ini
+++ b/tests/resources/test-dbconfig-no-uri.ini
@@ -3,15 +3,14 @@
 #
 [DEFAULT]
   DB_MAX_ACTIVE = 10
-  DEFAULT_TAP_USER = 'tapuser'
   VALIDATION_QUERY = SELECT 1
   VALIDATION_QUERY_TIMEOUT = 2
 
 #
 [db_properties]
-  DB_HOST = pgdb
+  DB_HOST = imgdb
   DB_NAME = vos
   DB_PORT = 5432
   DB_PWD = changeMe
-  DB_SCHEMA_NAME = sia
+  DB_SCHEMA_NAME = hyb
   DB_USER = astrolabe
