--- a/tests/resources/container-dbconfig.ini
+++ b/tests/resources/container-dbconfig.ini
@@ -3,7 +3,6 @@
 #
 [DEFAULT]
   DB_MAX_ACTIVE = 10
-  DEFAULT_TAP_USER = 'tapuser'
   VALIDATION_QUERY = SELECT 1
   VALIDATION_QUERY_TIMEOUT = 2
 
@@ -11,10 +10,10 @@
 #   NB: some values here require configparser.ExtendedInterpolation
 #
 [db_properties]
-  DB_HOST = pgdb
+  DB_HOST = imgdb
   DB_NAME = vos
   DB_PORT = 5432
   DB_PWD = changeMe
-  DB_SCHEMA_NAME = sia
+  DB_SCHEMA_NAME = hyb
   DB_USER = astrolabe
   DB_URI = postgresql://${DB_USER}:${DB_PWD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
