--- a/tests/resources/venv-dbconfig.ini
+++ b/tests/resources/venv-dbconfig.ini
@@ -11,9 +11,9 @@
 #
 [db_properties]
   DB_HOST = localhost
-  DB_NAME = vos
+  DB_NAME = alws
   DB_PORT = 5432
   DB_PWD = changeMe
-  DB_SCHEMA_NAME = hyb
+  DB_SCHEMA_NAME = public
   DB_USER = astrolabe
   DB_URI = postgresql://${DB_USER}:${DB_PWD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
