Two more updates for using public schema in the "alws" database.

--- a/tests/resources/test-dbconfig-no-uri.ini
+++ b/tests/resources/test-dbconfig-no-uri.ini
@@ -8,9 +8,9 @@
 
 #
 [db_properties]
-  DB_HOST = imgdb
-  DB_NAME = vos
+  DB_HOST = alwsdb
+  DB_NAME = alws
   DB_PORT = 5432
   DB_PWD = changeMe
-  DB_SCHEMA_NAME = hyb
+  DB_SCHEMA_NAME = public
   DB_USER = astrolabe
